--- a/clients/cpp/CMakeLists.txt
+++ b/clients/cpp/CMakeLists.txt
@@ -29,7 +29,9 @@ if(NOT cppzmq_POPULATED)
     add_subdirectory(${cppzmq_SOURCE_DIR} ${cppzmq_BINARY_DIR} EXCLUDE_FROM_ALL)
 endif()
 
-add_executable(client client.cpp)
-target_link_libraries(client PRIVATE Eigen3::Eigen)
-target_link_libraries(client PRIVATE nlohmann_json::nlohmann_json)
-target_link_libraries(client PRIVATE cppzmq)
+add_library(RemoteAPIClient SHARED RemoteAPIClient.cpp)
+target_link_libraries(RemoteAPIClient PUBLIC nlohmann_json::nlohmann_json)
+target_link_libraries(RemoteAPIClient PUBLIC cppzmq)
+
+add_executable(example example.cpp)
+target_link_libraries(example PRIVATE RemoteAPIClient)
