--- a/clients/cpp/CMakeLists.txt
+++ b/clients/cpp/CMakeLists.txt
@@ -46,3 +46,10 @@ if(OpenCV_FOUND)
     target_link_libraries(opencv PRIVATE RemoteAPIClient)
     target_link_libraries(opencv PRIVATE ${OpenCV_LIBS})
 endif()
+
+find_package(Qt5 COMPONENTS Core Widgets Gui)
+if(Qt5_FOUND)
+    add_executable(qt qt.cpp)
+    target_link_libraries(qt PRIVATE RemoteAPIClient)
+    target_link_libraries(qt PRIVATE Qt5::Widgets)
+endif()
