--- a/clients/cpp/CMakeLists.txt
+++ b/clients/cpp/CMakeLists.txt
@@ -117,8 +117,8 @@ target_link_libraries(example PRIVATE RemoteAPIClient)
 add_executable(synchronousImageTransmission synchronousImageTransmission.cpp)
 target_link_libraries(synchronousImageTransmission PRIVATE RemoteAPIClient)
 
-add_executable(bubbleRobclient bubbleRobClient.cpp)
-target_link_libraries(bubbleRobclient PRIVATE RemoteAPIClient)
+add_executable(bubbleRobClient bubbleRobClient.cpp)
+target_link_libraries(bubbleRobClient PRIVATE RemoteAPIClient)
 
 find_package(OpenCV COMPONENTS core imgproc highgui)
 if(OpenCV_FOUND)
