--- a/clients/java/pom.xml
+++ b/clients/java/pom.xml
@@ -61,7 +61,7 @@
                         <configuration>
                             <skip>${haveCalltips}</skip>
                             <environmentVariables>
-                                <PYTHONPATH>${basedir}/../python</PYTHONPATH>
+                                <PYTHONPATH>${basedir}/../python/src</PYTHONPATH>
                             </environmentVariables>
                             <executable>python3</executable>
                             <arguments>
@@ -79,7 +79,7 @@
                         <configuration>
                             <skip>${haveConstants}</skip>
                             <environmentVariables>
-                                <PYTHONPATH>${basedir}/../python</PYTHONPATH>
+                                <PYTHONPATH>${basedir}/../python/src</PYTHONPATH>
                             </environmentVariables>
                             <executable>python3</executable>
                             <arguments>
@@ -96,7 +96,7 @@
                         </goals>
                         <configuration>
                             <environmentVariables>
-                                <PYTHONPATH>${basedir}/../python</PYTHONPATH>
+                                <PYTHONPATH>${basedir}/../python/src</PYTHONPATH>
                             </environmentVariables>
                             <executable>python3</executable>
                             <arguments>
