install of loose items

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,6 @@ find_package(CoppeliaSim 4.5.1.7 REQUIRED)
 
 coppeliasim_add_addon("simAddOnZMQ remote API server.lua")
 
-coppeliasim_add_resource_directory(${CMAKE_CURRENT_SOURCE_DIR} SUBDIR programming)
+coppeliasim_add_resource_directory(clients SUBDIR programming/zmqRemoteApi)
+coppeliasim_add_resource_directory(tools SUBDIR programming/zmqRemoteApi)
+coppeliasim_add_resource(license.txt SUBDIR programming/zmqRemoteApi)
