--- a/clients/java/pom.xml
+++ b/clients/java/pom.xml
@@ -144,7 +144,7 @@
                                 <argument>-p</argument>
                                 <argument>exclude_methods=${GENERATE_EXCLUDE_METHODS}</argument>
                                 <argument>-P</argument>
-                                <argument>${env.COPPELIASIM_ROOT_DIR}/programming/include/python</argument>
+                                <argument>${env.COPPELIASIM_ROOT_DIR}/python</argument>
                                 <argument>-P</argument>
                                 <argument>${basedir}/../../tools</argument>
                                 <argument>-P</argument>
